--- a/css/reset.css
+++ b/css/reset.css
@@ -39,6 +39,7 @@ html::-ms-scrollbar-thumb {
 html {
 	scrollbar-width: thin;
 	scrollbar-color: var(--hover) var(--bg-body);
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 a {
