--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 @import './variables.css';
 @import './fonts.css';
-@import './reset.css';
-@import './media.css';
 
 canvas {
 	display: block;
@@ -25,9 +23,9 @@ body.lock {
 }
 
 .container {
-	max-width: 1240px;
+	max-width: 1280px;
 	margin: 0 auto;
-	padding: 0 20px;
+	padding: 0 40px;
 }
 
 .title {
@@ -211,6 +209,8 @@ body.lock {
 }
 
 .page-main-block__title {
+	max-width: 100%;
+	padding: 0 30px;
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -293,8 +293,11 @@ body.lock {
 	justify-content: space-between;
 	flex-wrap: wrap;
 	width: 100%;
-	margin: 56px 0 0 0;
-	padding: 0 54px;
+	margin: 15px 75px 0 75px;
+}
+
+.page-physics__item {
+	margin: 45px 0 0 0;
 }
 
 .page-physics__title-wrap {
@@ -303,8 +306,8 @@ body.lock {
 }
 
 .page-physics__title {
-	font-size: 30px;
-	margin: 0 0 0 15px;
+	margin: 0 0 15px 0;
+	font-size: 28px;
 	text-align: left;
 }
 
@@ -314,15 +317,10 @@ body.lock {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 0 0 0 47px;
 	background: url(../img/noise.png) center no-repeat;
 	border: 4px solid #333;
 	cursor: pointer;
 	transition: var(--transition);
-}
-
-.page-physics__video[data-id='quantum'] {
-	margin: 0 0 0 64px;
 }
 
 .page-physics__btn {
@@ -337,7 +335,7 @@ body.lock {
 }
 
 .page-physics__comparison {
-	margin: 200px 0 0 0;
+	margin: 100px 0 0 0;
 }
 
 .page-physics__comparison-block {
@@ -345,7 +343,7 @@ body.lock {
 }
 
 .page-physics__comparison-item {
-	flex: 0 1 820px;
+	flex: 0 1 815px;
 	margin: 0 0 0 100px;
 }
 
@@ -509,7 +507,7 @@ body.lock {
 
 /********** page output **********/
 .page-output__sub-title {
-	max-width: 920px;
+	max-width: 900px;
 	margin: 15px auto 0 auto;
 }
 
@@ -518,6 +516,10 @@ body.lock {
 	padding: 32px 0 70px 0;
 	background: var(--color-title);
 	letter-spacing: var(--letter-spacing-title);
+}
+
+.page-footer__container {
+	padding: 0 70px;
 }
 
 .page-footer__list {
