--- a/src/public/scss/components/general/_bases.scss
+++ b/src/public/scss/components/general/_bases.scss
@@ -2,6 +2,17 @@
 @use '../../abstracts/fonts';
 @use '../../abstracts/sizes';
 
+.wrapper {
+	min-height: 100%;
+	overflow: hidden;
+}
+
+.container {
+	max-width: 1300px;
+	margin: 0 auto;
+	padding: 0 50px;
+}
+
 canvas {
 	display: block;
 }
