2r0s - switch to webpack (end)

--- a/src/public/scss/components/experiments/_page-experiments.scss
+++ b/src/public/scss/components/experiments/_page-experiments.scss
@@ -21,15 +21,15 @@
 		align-items: center;
 
 		&[data-id='shroedinger-cat'] {
-			background: url(../img/shroedinger-cat.png) center no-repeat;
+			background: url(../../../img/shroedinger-cat.png) center no-repeat;
 		}
 
 		&[data-id='electron-diffraction'] {
-			background: url(../img/electron-diffraction.png) center no-repeat;
+			background: url(../../../img/electron-diffraction.png) center no-repeat;
 		}
 
 		&[data-id='heated-fullerenes'] {
-			background: url(../img/heated-fullerenes.png) center no-repeat;
+			background: url(../../../img/heated-fullerenes.png) center no-repeat;
 		}
 
 		&:hover {
