--- a/src/public/scss/components/index/_page-main-block.scss
+++ b/src/public/scss/components/index/_page-main-block.scss
@@ -6,7 +6,7 @@
 	display: flex;
 	align-items: flex-end;
 	justify-content: center;
-	background: url(../img/main-block-bg.svg) center no-repeat;
+	background: url(../../../img/main-block-bg.svg) center no-repeat;
 	background-size: cover;
 
 	&__title {
