--- a/src/public/scss/components/index/_page-physics.scss
+++ b/src/public/scss/components/index/_page-physics.scss
@@ -38,7 +38,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		background: url(../img/noise.png) center no-repeat;
+		background: url(../../../img/noise.png) center no-repeat;
 		border: 4px solid #333;
 		cursor: pointer;
 		transition: sizes.$transition;
