--- a/src/public/scss/media.scss
+++ b/src/public/scss/media.scss
@@ -1,286 +1,286 @@
-@media (max-width: 1000px) {
+// @media (max-width: 1000px) {
 
-	/********** page physics **********/
-	.page-physics {
-		&__list {
-			flex-direction: column;
-			align-items: center;
-		}
+// 	/********** page physics **********/
+// 	.page-physics {
+// 		&__list {
+// 			flex-direction: column;
+// 			align-items: center;
+// 		}
 
-		&__comparison {
-			&-block {
-				justify-content: center;
-			}
+// 		&__comparison {
+// 			&-block {
+// 				justify-content: center;
+// 			}
 
-			&-item {
-				margin: 0;
-				flex: 0 1 626px;
-			}
+// 			&-item {
+// 				margin: 0;
+// 				flex: 0 1 626px;
+// 			}
 
-			&-svg {
-				display: none;
-			}
-		}
+// 			&-svg {
+// 				display: none;
+// 			}
+// 		}
 
-		&__video-player-wrap>video {
-			max-width: 780px;
-		}
-	}
+// 		&__video-player-wrap>video {
+// 			max-width: 780px;
+// 		}
+// 	}
 
-	/********** page output **********/
-	.page-output__sub-title {
-		max-width: 700px;
-	}
-}
+// 	/********** page output **********/
+// 	.page-output__sub-title {
+// 		max-width: 700px;
+// 	}
+// }
 
-@media (max-width: 900px) {
+// @media (max-width: 900px) {
 
-	/********** page physics **********/
-	.page-physics__video-player-wrap>video {
-		max-width: 630px;
-	}
+// 	/********** page physics **********/
+// 	.page-physics__video-player-wrap>video {
+// 		max-width: 630px;
+// 	}
+
+	// /********** page contact **********/
+	// .page-contact {
+	// 	&__container {
+	// 		flex-direction: column;
+	// 	}
+
+	// 	&__google-map {
+	// 		padding: 50px 0 0 0;
+	// 	}
+	// }
+// }
+
+// @media (max-width: 839px) {
+
+// 	/********** page experiments **********/
+// 	.page-experiments__list {
+// 		justify-content: center;
+// 	}
+// }
+
+// @media (max-width: 768px) {
+
+	// /********** page header **********/
+	// .page-header__link-check {
+	// 	display: none;
+	// }
 
 	/********** page contact **********/
-	.page-contact {
-		&__container {
-			flex-direction: column;
-		}
+	// .page-contact__google-map {
+	// 	max-height: 350px;
+	// }
+// }
 
-		&__google-map {
-			padding: 50px 0 0 0;
-		}
-	}
-}
+// @media (max-width: 720px) {
+// 	.section {
+// 		margin: 80px 0;
+// 	}
 
-@media (max-width: 839px) {
+// 	.title {
+// 		font-size: 40px;
+// 	}
 
-	/********** page experiments **********/
-	.page-experiments__list {
-		justify-content: center;
-	}
-}
+// 	.sub-title {
+// 		font-size: 17px;
+// 	}
 
-@media (max-width: 768px) {
+	// /********** page physics **********/
+	// .page-physics {
+	// 	&__title {
+	// 		font-size: 28px;
+	// 	}
 
-	/********** page header **********/
-	.page-header__link-check {
-		display: none;
-	}
+	// 	&__comparison {
+	// 		&-block:first-child {
+	// 			margin: 0;
+	// 		}
 
-	/********** page contact **********/
-	.page-contact__google-map {
-		max-height: 350px;
-	}
-}
+	// 		&-item {
+	// 			padding: 0 10px;
 
-@media (max-width: 720px) {
-	.section {
-		margin: 80px 0;
-	}
+	// 			&-title {
+	// 				font-size: 34px;
+	// 			}
+	// 		}
+// 		}
 
-	.title {
-		font-size: 40px;
-	}
+// 		&__video-player-wrap>video {
+// 			max-width: 520px;
+// 		}
+// 	}
 
-	.sub-title {
-		font-size: 17px;
-	}
+// 	/********** page expert opinion **********/
+// 	.page-expert-opinion__sub-title {
+// 		font-size: 22px;
+// 	}
+// }
 
-	/********** page physics **********/
-	.page-physics {
-		&__title {
-			font-size: 28px;
-		}
+// @media (max-width: 600px) {
 
-		&__comparison {
-			&-block:first-child {
-				margin: 0;
-			}
+// 	/********** page physics **********/
+// 	.page-physics__video-player-wrap>video {
+// 		max-width: 400px;
+// 	}
+// }
 
-			&-item {
-				padding: 0 10px;
+// @media (max-width: 480px) {
+// 	.container {
+// 		max-width: 1240px;
+// 		padding: 0 20px;
+// 	}
 
-				&-title {
-					font-size: 34px;
-				}
-			}
-		}
+// 	.title {
+// 		font-size: 34px;
+// 	}
 
-		&__video-player-wrap>video {
-			max-width: 520px;
-		}
-	}
+// 	.sub-title {
+// 		font-size: 16px;
+// 	}
 
-	/********** page expert opinion **********/
-	.page-expert-opinion__sub-title {
-		font-size: 22px;
-	}
-}
+// 	/********** page header **********/
+// 	.menu__list>li {
+// 		margin: 30px 0;
+// 	}
 
-@media (max-width: 600px) {
+	// /********** page physics **********/
+	// .page-physics {
+	// 	&__title {
+	// 		font-size: 26px;
+	// 	}
 
-	/********** page physics **********/
-	.page-physics__video-player-wrap>video {
-		max-width: 400px;
-	}
-}
+	// 	&__video {
+	// 		width: 272px;
+	// 		height: 150px;
+	// 	}
 
-@media (max-width: 480px) {
-	.container {
-		max-width: 1240px;
-		padding: 0 20px;
-	}
+	// 	&__video-player-wrap>video {
+	// 		max-width: 300px;
+	// 	}
+	// }
 
-	.title {
-		font-size: 34px;
-	}
+	// /********** page expert opinion **********/
+	// .page-expert-opinion {
+	// 	&__sub-title {
+	// 		font-size: 22px;
+	// 	}
 
-	.sub-title {
-		font-size: 16px;
-	}
+	// 	&__volume-track {
+	// 		top: 140%;
+	// 		left: 50%;
+	// 		transform: translate(-50%, 0);
+	// 	}
+	// }
 
-	/********** page header **********/
-	.menu__list>li {
-		margin: 30px 0;
-	}
+	// /********** page output **********/
+	// .page-output__container {
+	// 	margin: 120px 0 0 0;
+	// }
 
-	/********** page physics **********/
-	.page-physics {
-		&__title {
-			font-size: 26px;
-		}
+	// /********** page footer **********/
+	// .page-footer {
+	// 	&__container {
+	// 		padding: 0 40px;
+	// 	}
 
-		&__video {
-			width: 272px;
-			height: 150px;
-		}
+	// 	&__sub-title {
+	// 		font-size: 13px;
+	// 	}
+	// }
+// }
 
-		&__video-player-wrap>video {
-			max-width: 300px;
-		}
-	}
+// @media (max-width: 460px) {
 
-	/********** page expert opinion **********/
-	.page-expert-opinion {
-		&__sub-title {
-			font-size: 22px;
-		}
+// 	/********** page main block **********/
+// 	.page-main-block {
+// 		&__btn {
+// 			width: 100px;
+// 			height: 100px;
+// 		}
 
-		&__volume-track {
-			top: 140%;
-			left: 50%;
-			transform: translate(-50%, 0);
-		}
-	}
+// 		&__sponsor {
+// 			display: none;
+// 		}
+// 	}
+// }
 
-	/********** page output **********/
-	.page-output__container {
-		margin: 120px 0 0 0;
-	}
+// @media (max-width: 420px) {
 
-	/********** page footer **********/
-	.page-footer {
-		&__container {
-			padding: 0 40px;
-		}
+// 	/********** page header **********/
+// 	.menu__link {
+// 		font-size: 28px;
+// 	}
 
-		&__sub-title {
-			font-size: 13px;
-		}
-	}
-}
+	// /********** page experiments **********/
+	// .page-experiments {
+	// 	&__item {
+	// 		width: 250px;
+	// 		height: 250px;
+	// 	}
 
-@media (max-width: 460px) {
+	// 	&__title {
+	// 		font-size: 26px;
+	// 	}
 
-	/********** page main block **********/
-	.page-main-block {
-		&__btn {
-			width: 100px;
-			height: 100px;
-		}
+	// 	&__sub-title {
+	// 		font-size: 18px;
+	// 	}
+	// }
 
-		&__sponsor {
-			display: none;
-		}
-	}
-}
+	// /********** page physics **********/
+	// .page-physics {
+	// 	margin: 10px 0 100px 0;
+	// }
+// }
 
-@media (max-width: 420px) {
+// @media (max-width: 400px) {
 
-	/********** page header **********/
-	.menu__link {
-		font-size: 28px;
-	}
+// 	/********** page materials **********/
+// 	.page-materials {
+// 		&__title {
+// 			font-size: 22px;
+// 		}
 
-	/********** page experiments **********/
-	.page-experiments {
-		&__item {
-			width: 250px;
-			height: 250px;
-		}
+// 		&__link {
+// 			font-size: 16px;
+// 		}
+// 	}
+// }
 
-		&__title {
-			font-size: 26px;
-		}
+// @media (max-width: 355px) {
 
-		&__sub-title {
-			font-size: 18px;
-		}
-	}
+// 	/********** page materials **********/
+// 	.page-materials {
+// 		&__item {
+// 			margin: 18px 0;
+// 		}
 
-	/********** page physics **********/
-	.page-physics {
-		margin: 10px 0 100px 0;
-	}
-}
+// 		&__title {
+// 			font-size: 21px;
+// 		}
 
-@media (max-width: 400px) {
+// 		&__link {
+// 			margin: 18px 0;
+// 			font-size: 14px;
+// 		}
+// 	}
+// }
 
-	/********** page materials **********/
-	.page-materials {
-		&__title {
-			font-size: 22px;
-		}
+// @media (max-width: 360px) {
 
-		&__link {
-			font-size: 16px;
-		}
-	}
-}
+// 	/********** page header **********/
+// 	.menu__link {
+// 		font-size: 24px;
+// 	}
 
-@media (max-width: 355px) {
+// 	// /********** page physics **********/
+// 	// .page-physics__comparison-item-title {
+// 	// 	font-size: 28px;
+// 	// }
 
-	/********** page materials **********/
-	.page-materials {
-		&__item {
-			margin: 18px 0;
-		}
-
-		&__title {
-			font-size: 21px;
-		}
-
-		&__link {
-			margin: 18px 0;
-			font-size: 14px;
-		}
-	}
-}
-
-@media (max-width: 360px) {
-
-	/********** page header **********/
-	.menu__link {
-		font-size: 24px;
-	}
-
-	/********** page physics **********/
-	.page-physics__comparison-item-title {
-		font-size: 28px;
-	}
-
-	/********** page footer **********/
-	.page-footer__container {
-		padding: 0 20px;
-	}
-}
+// 	/********** page footer **********/
+// 	.page-footer__container {
+// 		padding: 0 20px;
+// 	}
+// }
