2s1f - add glsl animation

--- a/src/public/scss/fonts.scss
+++ b/src/public/scss/fonts.scss
@@ -1,23 +1,15 @@
 @font-face {
-	font-family: 'TTNormsPro';
-	src: url('../fonts/tt-norms-pro-medium.eot');
-	src: url('../fonts/tt-norms-pro-medium.woff') format('woff'),
-		url('../fonts/tt-norms-pro-medium.ttf') format('truetype'),
-		url('../fonts/tt-norms-pro-medium.otf') format('truetype'),
-		url('../fonts/tt-norms-pro-medium.svg') format('svg');
 	font-weight: 500;
+	font-family: 'TTNormsPro';
 	font-style: normal;
 	font-display: swap;
+	src: url('../fonts/tt-norms-pro-medium.woff') format('woff');
 }
 
 @font-face {
-	font-family: 'TTNormsPro';
-	src: url('../fonts/tt-norms-pro-extra-bold.eot');
-	src: url('../fonts/tt-norms-pro-extra-bold.woff') format('woff'),
-		url('../fonts/tt-norms-pro-extra-bold.ttf') format('truetype'),
-		url('../fonts/tt-norms-pro-extra-bold.otf') format('truetype'),
-		url('../fonts/tt-norms-pro-extra-bold.svg') format('svg');
 	font-weight: 800;
+	font-family: 'TTNormsPro';
 	font-style: normal;
 	font-display: swap;
+	src: url('../fonts/tt-norms-pro-extra-bold.woff') format('woff');
 }
