--- a/src/public/scss/components/experiments/_page-experiments.scss
+++ b/src/public/scss/components/experiments/_page-experiments.scss
@@ -15,7 +15,7 @@
 		height: 350px;
 		margin: 20px;
 		cursor: pointer;
-		transition: sizes.$transition;
+		transition: 0.5s ease-in-out;
 		display: flex;
 		justify-content: center;
 		align-items: center;
